<resources>
    <string name="app_name">약먹을\n시간이약!</string>
    <string name="email">아이디</string>
    <string name="todo">TODO</string>
    <string name="login_button">로그인</string>
    
    <string name="login_condition">로그인상태유지</string>
    
    <string name="find_email">아이디찾기</string>
    <string name="stick">ㅣ</string>
    <string name="find_password">비밀번호찾기</string>
    
    <string name="registration">회원가입</string>
    <string name="email_id">이메일</string>
    <string name="password">비밀번호</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="name">이름</string>
    <string name="birth">생년월일</string>
    
    <string name="sex">성별(선택)</string>
    <string name="men">남자</string>
    <string name="women">여자</string>

    <string name="pregnancy">임신유/무(선택)</string>
    <string name="OK">O</string>
    <string name="NO">X</string>

    <string name="join">가입완료</string>


    <string name="app_name2">알람 설정</string>
    <string name="action_settings_addition">추가</string>
    <string name="action_settings_deletion">삭제</string>

    <string name="save">저장</string>
    <string name="cancel">취소</string>
    <string name="drug_name">약품명</string>
    <string name="time">시간</string>

    <string name="url">https://terms.naver.com/medicineSearch.nhn?mode=nameSearch</string>
    <string name="version">1.0.0v</string>
</resources>
