<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/login_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="#84c3bd"
        android:src="@drawable/login" />

    <EditText
        android:id="@+id/Email_input"
        android:layout_width="348dp"
        android:layout_height="46dp"
        android:layout_weight="1"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="301.5dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/email_input"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:textColor="#66000000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/Password_input"
        android:layout_below="@id/Email_input"
        android:layout_width="348dp"
        android:layout_height="46dp"
        android:layout_weight="1"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:paddingLeft="15dp"
        android:background="@drawable/password_input"
        android:hint="@string/password"
        android:textSize="20sp"
        android:textColor="#66000000"
        android:inputType="textPassword"
        android:imeOptions="actionGo"
 />

    <TextView
        android:id="@+id/Login_button"
        android:layout_below="@id/Password_input"
        android:layout_width="348dp"
        android:layout_height="46dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:paddingTop="8dp"
        android:paddingLeft="115dp"
        android:background="@drawable/login_button"
        android:text="@string/login_button"
        android:textSize="20sp"
        android:textColor="#b36fb8b2"
        />

    <CheckBox
        android:id="@+id/login_maintain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="110dp"
        android:layout_marginRight="110dp"
        android:layout_below="@id/Login_button"
        android:text="@string/login_condition"
        android:textSize="15sp"
        android:textColor="#b3000000"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@id/login_maintain"
        >
    <TextView
        android:id="@+id/find_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:text="@string/find_email" />
    <TextView
        android:id="@+id/find_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_password" />
    <TextView
        android:id="@+id/registration"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/registration" />
    </LinearLayout>
</RelativeLayout>