<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/dialog01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp" />





    <LinearLayout
        android:id="@+id/Email_make"
        android:layout_width="348dp"
        android:layout_height="46dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:background="@drawable/email_make">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@drawable/email_input"
            android:gravity="center"
            android:text="@string/email_id"
            android:textColor="#66000000"
            android:textSize="15sp" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/empty"
            android:fontFamily="@font/regular"
            android:inputType="textEmailAddress"
            android:paddingLeft="15dp"
            android:textColor="#66000000"
            android:textSize="15sp" />
</LinearLayout>







    <LinearLayout
        android:id="@+id/Password_make"
        android:layout_below="@id/Email_make"
        android:layout_marginTop="8dp"
        android:layout_width="348dp"
        android:layout_height="46dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:orientation="horizontal"
        android:background="@drawable/password_make">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@drawable/password_input"
            android:gravity="center"
            android:text="@string/password"
            android:textColor="#66000000"
            android:textSize="15sp" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/empty"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:textColor="#66000000"
        android:fontFamily="@font/regular"
        android:textSize="15sp" />
    </LinearLayout>



<LinearLayout
    android:id="@+id/Password_confirm"
    android:layout_below="@id/Password_make"
    android:layout_width="348dp"
    android:layout_height="46dp"
    android:layout_marginTop="4dp"
    android:layout_marginLeft="45dp"
    android:layout_marginRight="45dp"
    android:background="@drawable/password_confirm"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="3.5"
        android:background="@drawable/password_input"
        android:gravity="center"
        android:text="@string/password_confirm"
        android:textColor="#66000000"
        android:textSize="15sp" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="@drawable/empty"
        android:fontFamily="@font/regular"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:textColor="#66000000"
        android:textSize="15sp" />
</LinearLayout>


    <LinearLayout
        android:id="@+id/Name"
        android:layout_below="@id/Password_confirm"
        android:layout_width="348dp"
        android:layout_height="46dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/name_make"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="#66000000"
            android:textSize="15sp" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="15dp"
        android:background="@drawable/empty"
        android:inputType="textPersonName"
        android:textColor="#66000000"
        android:fontFamily="@font/regular"
        android:textSize="15sp" />
    </LinearLayout>






    <EditText
        android:id="@+id/Birth"
        android:layout_width="348dp"
        android:layout_height="46dp"
        android:layout_weight="1"
        android:layout_below="@id/Name"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/login_button"
        android:text="@string/birth"
        android:paddingLeft="15dp"
        android:textColor="#66000000"
        android:fontFamily="@font/regular"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:orientation="horizontal"
        android:layout_below="@id/Birth">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="50dp"
                android:text="@string/sex"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/man"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/men" />
                <RadioButton
                    android:id="@+id/women"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/women" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="50dp"
                android:text="@string/pregnancy" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/exist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/OK" />
                <RadioButton
                    android:id="@+id/non_exist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NO" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
