<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/login_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="#84c3bd" />

    <EditText
        android:id="@+id/Email_make"
        android:layout_width="348dp"
        android:layout_height="46dp"
        android:layout_weight="1"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/login_button"
        android:text="@string/email_id"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:textColor="#66000000"
        android:fontFamily="@font/regular"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/Password_make"
        android:layout_width="348dp"
        android:layout_height="46dp"
        android:layout_below="@id/Email_make"
        android:layout_weight="1"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/email_input"
        android:text="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:textColor="#66000000"
        android:fontFamily="@font/regular"
        android:textSize="15sp" />

        <EditText
            android:id="@+id/Password_confirm"
            android:layout_width="348dp"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:layout_below="@id/Password_make"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="45dp"
            android:background="@drawable/password_input"
            android:fontFamily="@font/regular"
            android:text="@string/password_confirm"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:textColor="#66000000"
            android:textSize="15sp" />

    <EditText
        android:id="@+id/Name"
        android:layout_width="348dp"
        android:layout_height="46dp"
        android:layout_weight="1"
        android:layout_below="@id/Password_confirm"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/login_button"
        android:text="@string/name"
        android:paddingLeft="15dp"
        android:textColor="#66000000"
        android:fontFamily="@font/regular"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/Birth"
        android:layout_width="348dp"
        android:layout_height="46dp"
        android:layout_weight="1"
        android:layout_below="@id/Name"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/login_button"
        android:text="@string/birth"
        android:paddingLeft="15dp"
        android:textColor="#66000000"
        android:fontFamily="@font/regular"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:orientation="horizontal"
        android:layout_below="@id/Birth">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="50dp"
            android:text="@string/sex"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="50dp"
                android:text="@string/pregnancy" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        </LinearLayout>
</RelativeLayout>